# Glyphs-mcp

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CODEX.md  MCP.md  README.md  RunInstall.command  TRANSLATIONS.md  inspect_fastmcp_v2.py  install.py  pyproject.toml  requirements.dev.txt  requirements.runtime.txt  requirements.txt
.agents/plugins/: marketplace.json
.continue/mcpServers/: glyphs-mcp-server.yaml
.github/: FUNDING.yml
.github/workflows/: pages.yml  release.yml
Documentations/: document.md
Documentations/Markdown/: 006_settings_settings_user-settings.md  040_font-info_font.md  042_font-info_exports.md  043_font-info_layout.md  090_layout_feature-code_layout_tokens.md
_continue/mcpServers/: glyphs-mcp-server.yaml
content/: all-in-one-plugin-plan.md  compensated-tuning-tools.md  glyphs-mcp.md  kerning-tools.md  kerning-workflow.md  spacing-config.example.json  spacing-tools.md
macos-installer/: README.md  RELEASING.md
scripts/: build_installer_app.sh  build_plugin_manager_bundle.sh  build_release_zip.sh  bump_version.py  convert-images.mjs  generate_installer_appicon_assets.sh  make_installer_dmg.sh  notarize_installer_app.sh  publish_release_assets.sh  release_security.py  run_local_release_tests.sh  sync_codex_plugin_skills.sh  verify_release_artifacts.sh
skills/: ROADMAP.md
snppets/: anchors-add-on-all-masters.py  components-add-at-offset.py  components-reverse-paths.py  metrics-adjust-sidebearings.py
src/glyphs-mcp/: bridge.js  (+1 more)
website/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+661 files in other folders)
