[project]
name = "glyphs-mcp"
dynamic = ["version"]
description = "MCP server for Glyphs.app"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastmcp>=2.0",
    "starlette>=0.40",
]

# Required for the ExportDesignspaceAndUFO tool
[project.optional-dependencies]
ufo = [
    "fonttools>=4.50",
    "fontParts>=0.9",
]
